# medics-ext-retinal-layer-segmentation

./: .gitattributes  .gitignore  DRAG_DROP_SOLUTION.md  EXTENSION_DEVELOPMENT.md  INSTALLATION_NOTES.md  MANIFEST.in  MODEL_SPLIT_REASSEMBLY_GUIDE.md  README.md  README_TEMPLATE.md  pyproject.toml  split_model_file.py  test_reassembly.py  verify_chunking.py
medics_ext_example/: __init__.py
medics_ext_example/ui/: __init__.py  main_widget.py
medics_ext_retinal_layer_segmentation/: ExtensionMain.py  RetinalLayerSegmentaionUI.py  RetinalLayerSegmentaionUI.ui  RetinalLayerSegmentation.py  __init__.py  extension.json  model_reassembly.py  settings.ini
medics_ext_retinal_layer_segmentation/LayerSegmentation/: LayerSegSideCtrlPanelUI.py  LayerSegSideCtrlPanelUI.ui  LayerSegmentation.py  LayerSegmentationUI.py  LayerSegmentationUI.ui  __init__.py
medics_ext_retinal_layer_segmentation/LoadDataSettingsDlg/: LoadDataSettings.py  LoadDataSettingsDlg.py  LoadDataSettingsDlg.ui  __init__.py
medics_ext_retinal_layer_segmentation/LoadGroupDataDlg/: LoadGroupDataDlg.py  LoadGroupDataDlg.ui  LoadGroupDataMain.py
medics_ext_retinal_layer_segmentation/LoadMedDataDlg/: LoadMedData.py  LoadMedDataDlg.py  LoadMedDataDlg.ui  __init__.py
medics_ext_retinal_layer_segmentation/ResolutionHelper/: CalculateResolutionDlg.py  CalculateResolutionDlg.ui  CalculateResolutionMain.py  __init__.py
medics_ext_retinal_layer_segmentation/model/: layersegmodel.enc
medics_ext_retinal_layer_segmentation/model/chunks/: layersegmodel.meta.json
medics_ext_retinal_layer_segmentation/utils/: curveeditorplot.py  datadict.py  fileIO.py  imageLabelerPlot.py  indicatorPlot.py  onnx_provider_utils.py  utils.py  utils_pyside6.py  utils_vtk.py  volumeLabelerPlot.py
tests/: test_extension.py
