[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medics-ext-retinal-layer-segmentation"
version = "1.0.0"
description = "Retinal Layer Segmentation extension for MedICS"
authors = [
    {name = "Extension Developer", email = "developer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "medics-extension-sdk @ git+https://github.com/medics-dev/MedICS_Extension_Base.git",
    "medics @ git+https://_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@github.com/Yukun-Guo/MedICS.git",
    "PySide6==6.8.2.1",
    "numpy>=1.20.0",
    "vtk>=9.3.1",
    "onnxruntime==1.18.1; sys_platform == 'darwin'",
    "onnxruntime-gpu==1.18.1; sys_platform == 'win32' or sys_platform == 'linux'",
    'GPUtil==1.4.0',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Note: For local development with MedICS, install medics first:
#   uv pip install -e /path/to/medics
# Then install this extension:
#   uv pip install --no-deps -e .
#   uv pip install "PySide6>=6.8.0" "numpy>=1.20.0"
#   uv pip install "git+https://github.com/medics-dev/MedICS_Extension_Base.git"

[project.urls]
Homepage = "https://github.com/your-github-username/medics-ext-retinal-layer-segmentation"
Documentation = "https://github.com/your-github-username/medics-ext-retinal-layer-segmentation/blob/main/README.md"
Repository = "https://github.com/your-github-username/medics-ext-retinal-layer-segmentation.git"
Issues = "https://github.com/your-github-username/medics-ext-retinal-layer-segmentation/issues"

[project.entry-points."medics.extensions"]
example = "medics_ext_retinal_layer_segmentation:RetinalLayerSegmentationExtension"

[tool.setuptools.packages.find]
where = ["."]
include = ["medics_ext_retinal_layer_segmentation*"]

[tool.setuptools.package-data]
medics_ext_retinal_layer_segmentation = [
    "resources/**/*",
    "model/chunks/*",
    "*.ui",
    "*.ini",
    "*.json",
]
